--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "mssql": "^11.0.1",
-    "pg": "^8.13.0"
+    "pg": "^8.13.1",
+    "xlsx": "^0.18.5"
   }
 }
