--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.7",
+    "csv-parser": "^3.0.0",
+    "csv-writer": "^1.6.0",
     "mssql": "^11.0.1",
     "pg": "^8.13.1",
     "xlsx": "^0.18.5"
